--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DURATECHNO - Nosotros</title>
+    <meta name="description" content="Conocé nuestra empresa y el trabajo realizado.">
+    <meta name="keywords" content="home studio, filmmaker, tecnologia, accesorios para musicos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 
@@ -28,7 +30,7 @@
                       <a class="nav-link" href="../pages/nosotros.html" target="_blank">NOSOTROS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/productos2.html" target="_blank">PRODUCTOS</a>
+                    <a class="nav-link" href="../pages/productos.html" target="_blank">PRODUCTOS</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="../pages/reviews.html" target="_blank">REVIEWS</a>
