--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                       <a class="nav-link" href="./pages/nosotros.html" target="_blank">NOSOTROS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/productos2.html" target="_blank">PRODUCTOS</a>
+                    <a class="nav-link" href="./pages/productos.html" target="_blank">PRODUCTOS</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="./pages/reviews.html" target="_blank">REVIEWS</a>
