Incorporación de estilos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,122 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DURATECHNO - Contacto</title>
-    <meta name="description" content="Encontrá el producto que se adapte a tus necesidades.">
-    <meta name="keywords" content="home studio, filmmaker, tecnologia, accesorios para musicos, productos">
+    <meta name="description" content="Conocé mas sobre tu producto favorito.">
+    <meta name="keywords" content="home studio, filmmaker, tecnologia, accesorios para musicos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <!-- GOOGLE FONTs -->
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <!-- ANIMATE CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+
 </head>
-<body class="body_contacto">
-  <header>
-    <nav class="navbar navbar-expand-lg background-color">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">
-            <img class="logo__nav" src="../assets/img/logoduratechno.svg" alt="logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="../pages/nosotros.html" target="_blank">NOSOTROS</a>
-            </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/productos.html" target="_blank">PRODUCTOS</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="../pages/reviews.html" target="_blank">REVIEWS</a>
-            </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html" target="_blank">CONTACTO</a>
-              </li>
-            </ul>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg background-color">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="./index.html">
+                <img class="logo__nav" src="../assets/img/logoduratechno.svg" alt="logo">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="../pages/nosotros.html" target="_blank">NOSOTROS</a>
+                </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/productos.html" target="_blank">PRODUCTOS</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="../pages/reviews.html" target="_blank">REVIEWS</a>
+                </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/contacto.html" target="_blank">CONTACTO</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container_page-contact">
+      <span class="big-circle"></span>
+      <img src="../assets/img/shape.png" class="square" alt="" />
+      <div class="form">
+        <div class="contact-info">
+          <h3 class="title">Dejanos tu consulta</h3>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+            dolorum adipisci recusandae praesentium dicta!
+          </p>
+
+          <div class="info">
+            <div class="information">
+              <img src="../assets/img/location.png" class="icon" alt="" />
+              <p>La Plata, Bs. As., Arg. 11553</p>
+            </div>
+            <div class="information">
+              <img src="../assets/img/email.png" class="icon" alt="" />
+              <p>duratechno@gmail.com</p>
+            </div>
+            <div class="information">
+              <img src="../assets/img/phone.png" class="icon" alt="" />
+              <p>123-456-789</p>
+            </div>
+          </div>
+
+          <div class="social-media">
+            <p>Contacte con nosotros :</p>
+            <div class="social-icons">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </div>
           </div>
         </div>
-    </nav>
-  </header>
-    
-  <div class="content">
 
-        <h1 class="logo">Contactate con <span>Nosotros</span></h1>
+        <div class="contact-form">
+          <span class="circle one"></span>
+          <span class="circle two"></span>
 
-        <div class="contact-wrapper animated bounceInUp">
-            <div class="contact-form">
-                <h3>Contactanos</h3>
-                <form action="">
-                    <p>
-                        <label>Nombre y Apellido</label>
-                        <input type="text" name="fullname">
-                    </p>
-                    <p>
-                        <label>Direccioón de mail</label>
-                        <input type="email" name="email">
-                    </p>
-                    <p>
-                        <label>Teléfono</label>
-                        <input type="tel" name="phone">
-                    </p>
-                    <p>
-                        <label>Asunto</label>
-                        <input type="text" name="affair">
-                    </p>
-                    <p class="block">
-                       <label>Mensaje</label> 
-                        <textarea name="message" rows="3"></textarea>
-                    </p>
-                    <p class="block">
-                        <button>
-                           Enviar
-                        </button>
-                    </p>
-                </form>
+          <form action="../index.html" autocomplete="off">
+            <h3 class="title">Contactate</h3>
+            <div class="input-container">
+              <input type="text" name="name" class="input" />
+              <label for="">Nombre</label>
+              <span>Nombre</span>
             </div>
-            <div class="contact-info">
-                <h4>Mas información</h4>
-                <ul>
-                    <li><i class="fas fa-map-marker-alt"></i> La Plata, Bs. As.</li>
-                    <li><i class="fas fa-phone"></i> (111) 111 111 111</li>
-                    <li><i class="fas fa-envelope-open-text"></i> 02gabrieldiaz@gmail.com</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero provident ipsam necessitatibus repellendus?</p>
-                <p>www.duratechno.com</p>
+            <div class="input-container">
+              <input type="email" name="email" class="input" />
+              <label for="">Email</label>
+              <span>Email</span>
             </div>
+            <div class="input-container">
+              <input type="tel" name="phone" class="input" />
+              <label for="">Teléfono</label>
+              <span>Teléfono</span>
+            </div>
+            <div class="input-container textarea">
+              <textarea name="message" class="input"></textarea>
+              <label for="">Mensaje</label>
+              <span>Mensaje</span>
+            </div>
+            <input type="submit" value="Send" class="btn" />
+          </form>
         </div>
-
-  </div>
-
-  <footer> 
-      <div>
-          <a href="https://www.instagram.com/duratechno/" target="_blank">
-              <img class="footer_img" src="../assets/img/instagram_logo.svg" alt="Icono Instagram">
-          </a>
       </div>
-      <div>
-          <a href="https://www.youtube.com/channel/UC4eoBMICMSjRvYHxWtyNZlQ" target="_blank">
-              <img class="footer_img" src="../assets/img/youtube_logo.svg" alt="Icono YouTube">
-          </a>
-      </div>
-      <div>
-          <a href="https://www.facebook.com/gabydiaz99" target="_blank">
-              <img class="footer_img" src="../assets/img/facebook_logo.svg" alt="Icono Facebook">
-          </a>
-      </div> 
-  </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    </div>
 
+
+    <footer class="pie-pagina">
+      <div class="grupo-1">
+          <div class="box">
+              <figure>
+                  <a href="#">
+                      <img src="../assets/img/logoduratechno.svg" alt="Logo de DURATECHNO">
+                  </a>
+              </figure>
+          </div>
+          <div class="box">
+              <h2>SOBRE NOSOTROS</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+          </div>
+          <div class="box">
+              <h2>SIGUENOS</h2>
+              <div class="red-social">
+                  <a href="https://www.facebook.com/gabydiaz99" target="_blank" class="fa fa-facebook"></a>
+                  <a href="https://www.instagram.com/duratechno/" target="_blank" class="fa fa-instagram"></a>
+                  <a href="https://www.youtube.com/channel/UC4eoBMICMSjRvYHxWtyNZlQ" target="_blank"" class="fa fa-youtube"></a>
+              </div>
+          </div>
+      </div>
+      <div class="grupo-2">
+          <small>&copy; 2022 <b>DURATECHNO</b> - Todos los Derechos Reservados.</small>
+      </div>
+    </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+  <script src="../js/app.js"></script>
+  <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 </body>
 </html>
