--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -43,23 +43,34 @@
             </div>
         </nav>
     </header>
-    <footer> 
-      <div>
-          <a href="https://www.instagram.com/duratechno/" target="_blank">
-              <img class="footer_img" src="../assets/img/instagram_logo.svg" alt="Icono Instagram">
-          </a>
+    <footer class="pie-pagina">
+      <div class="grupo-1">
+          <div class="box">
+              <figure>
+                  <a href="#">
+                      <img src="../assets/img/logoduratechno.svg" alt="Logo de DURATECHNO">
+                  </a>
+              </figure>
+          </div>
+          <div class="box">
+              <h2>SOBRE NOSOTROS</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+          </div>
+          <div class="box">
+              <h2>SIGUENOS</h2>
+              <div class="red-social">
+                  <a href="https://www.facebook.com/gabydiaz99" target="_blank" class="fa fa-facebook"></a>
+                  <a href="https://www.instagram.com/duratechno/" target="_blank" class="fa fa-instagram"></a>
+                  <a href="https://www.youtube.com/channel/UC4eoBMICMSjRvYHxWtyNZlQ" target="_blank"" class="fa fa-youtube"></a>
+              </div>
+          </div>
       </div>
-      <div>
-          <a href="https://www.youtube.com/channel/UC4eoBMICMSjRvYHxWtyNZlQ" target="_blank">
-              <img class="footer_img" src="../assets/img/youtube_logo.svg" alt="Icono YouTube">
-          </a>
+      <div class="grupo-2">
+          <small>&copy; 2022 <b>DURATECHNO</b> - Todos los Derechos Reservados.</small>
       </div>
-      <div>
-          <a href="https://www.facebook.com/gabydiaz99" target="_blank">
-              <img class="footer_img" src="../assets/img/facebook_logo.svg" alt="Icono Facebook">
-          </a>
-      </div> 
-    </footer>  
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </body>
 </html>
