--- a/pages/productos.html
+++ b/pages/productos.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 
 </head>
-<body>
+<body class="body_product">
     <header>
         <nav class="navbar navbar-expand-lg background-color">
             <div class="container-fluid">
@@ -43,6 +43,180 @@
             </div>
         </nav>
     </header>
+
+    <div class="container_product">
+
+      <h3 class="title"> PRODUCTOS </h3>
+   
+      <div class="products-container">
+   
+         <div class="product" data-name="p-1">
+            <img src="../assets/img/audio-technica-m40x.png" alt="">
+            <h3>Audio-Technica-m50x</h3>
+            <div class="price">$150.00</div>
+         </div>
+   
+         <div class="product" data-name="p-2">
+            <img src="../assets/img/camera-canon (1).jpg" alt="">
+            <h3>Camara Canon</h3>
+            <div class="price">$700.00</div>
+         </div>
+   
+         <div class="product" data-name="p-3">
+            <img src="../assets/img/essential-keylab49.png" alt="">
+            <h3>Arturia 66key</h3>
+            <div class="price">$2.00</div>
+         </div>
+   
+         <div class="product" data-name="p-4">
+            <img src="../assets/img/imterfaz_scarlett.png" alt="">
+            <h3>Scarlett</h3>
+            <div class="price">$2.00</div>
+         </div>
+   
+         <div class="product" data-name="p-5">
+            <img src="../assets/img/interfaz2.png" alt="">
+            <h3>broccoli</h3>
+            <div class="price">$2.00</div>
+         </div>
+   
+         <div class="product" data-name="p-6">
+            <img src="../assets/img/teclado.webp" alt="">
+            <h3>potatoes</h3>
+            <div class="price">$2.00</div>
+         </div>
+   
+      </div>
+   
+   </div>
+   
+   <div class="products-preview">
+   
+      <div class="preview" data-target="p-1">
+         <i class="fas fa-times"></i>
+         <img src="../assets/img/Imagenes para page productos/audio-technica-m50x.png" alt="">
+         <h3>Audio-technica-m50x</h3>
+         <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+            <span>( 250 )</span>
+         </div>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+         <div class="price">$150.00</div>
+         <div class="buttons">
+            <a href="#" class="buy">buy now</a>
+            <a href="#" class="cart">add to cart</a>
+         </div>
+      </div>
+   
+      <div class="preview" data-target="p-2">
+         <i class="fas fa-times"></i>
+         <img src="../assets/img/Imagenes para page productos/canon.png" alt="">
+         <h3>Cámara Canon</h3>
+         <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+            <span>( 250 )</span>
+         </div>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+         <div class="price">$2.00</div>
+         <div class="buttons">
+            <a href="#" class="buy">buy now</a>
+            <a href="#" class="cart">add to cart</a>
+         </div>
+      </div>
+   
+      <div class="preview" data-target="p-3">
+         <i class="fas fa-times"></i>
+         <img src="../assets/img/essential-keylab49.png" alt="">
+         <h3>Arturia</h3>
+         <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+            <span>( 250 )</span>
+         </div>
+         <p>Sintetizador digital, controlador MIDI. Pensado para todos aquellos que se quieran dedicar a su HOME-Studio.</p>
+         <div class="price">$124.00</div>
+         <div class="buttons">
+            <a href="#" class="buy">buy now</a>
+            <a href="#" class="cart">add to cart</a>
+         </div>
+      </div>
+   
+      <div class="preview" data-target="p-4">
+         <i class="fas fa-times"></i>
+         <img src="../assets/img/imterfaz_scarlett.png" alt="">
+         <h3>organic brinjal</h3>
+         <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+            <span>( 250 )</span>
+         </div>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+         <div class="price">$2.00</div>
+         <div class="buttons">
+            <a href="#" class="buy">buy now</a>
+            <a href="#" class="cart">add to cart</a>
+         </div>
+      </div>
+   
+      <div class="preview" data-target="p-5">
+         <i class="fas fa-times"></i>
+         <img src="../assets/img/interfaz2.png" alt="">
+         <h3>organic broccoli</h3>
+         <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+            <span>( 250 )</span>
+         </div>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+         <div class="price">$2.00</div>
+         <div class="buttons">
+            <a href="#" class="buy">buy now</a>
+            <a href="#" class="cart">add to cart</a>
+         </div>
+      </div>
+   
+      <div class="preview" data-target="p-6">
+         <i class="fas fa-times"></i>
+         <img src="../assets/img/teclado.webp" alt="">
+         <h3>organic potatoes</h3>
+         <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+            <span>( 250 )</span>
+         </div>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+         <div class="price">$2.00</div>
+         <div class="buttons">
+            <a href="#" class="buy">buy now</a>
+            <a href="#" class="cart">add to cart</a>
+         </div>
+      </div>
+   
+   </div>
+
+    
     <footer class="pie-pagina">
       <div class="grupo-1">
           <div class="box">
@@ -72,5 +246,6 @@
     </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+  <script src="../js/script.js" defer></script>
 </body>
 </html>
