Actualización: Proyecto final

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -27,16 +27,16 @@
                     <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="../pages/nosotros.html" target="_blank">NOSOTROS</a>
+                      <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/productos.html" target="_blank">PRODUCTOS</a>
+                    <a class="nav-link" href="../pages/productos.html">PRODUCTOS</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="../pages/reviews.html" target="_blank">REVIEWS</a>
+                      <a class="nav-link" href="../pages/reviews.html">REVIEWS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html" target="_blank">CONTACTO</a>
+                    <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
                   </li>
                 </ul>
               </div>
@@ -193,7 +193,7 @@
          </div>
       </div>
    
-      <div class="preview" data-target="p-6">
+      < class="preview" data-target="p-6">
          <i class="fas fa-times"></i>
          <img src="../assets/img/teclado.webp" alt="">
          <h3>Teclado Mecánico Keychron K2</h3>
@@ -207,11 +207,10 @@
          </div>
          <p>K2 es un teclado inalámbrico o con cable súper táctil que le brinda todas las teclas y funciones que necesita mientras lo mantiene compacto, con la batería más grande que se haya visto en un teclado mecánico.</p>
          <div class="price">$79.00</div>
-         <div class="buttons">
+         < class="buttons">
             <a href="#" class="buy">Comprar</a>
             <a href="#" class="cart">Agregar al carrito</a>
-         </div>
-      </div>
+      
    
    </div>
 
