--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                     <a class="nav-link" aria-current="page" href="./index.html">INICIO</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./pages/nosotros.html" target="_blank">NOSOTROS</a>
+                      <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/productos.html" target="_blank">PRODUCTOS</a>
+                    <a class="nav-link" href="./pages/productos.html">PRODUCTOS</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./pages/reviews.html" target="_blank">REVIEWS</a>
+                      <a class="nav-link" href="./pages/reviews.html">REVIEWS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html" target="_blank">CONTACTO</a>
+                    <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
                   </li>
                 </ul>
               </div>
