--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -27,16 +27,16 @@
                     <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="../pages/nosotros.html" target="_blank">NOSOTROS</a>
+                      <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/productos.html" target="_blank">PRODUCTOS</a>
+                    <a class="nav-link" href="../pages/productos.html">PRODUCTOS</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="../pages/reviews.html" target="_blank">REVIEWS</a>
+                      <a class="nav-link" href="../pages/reviews.html">REVIEWS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html" target="_blank">CONTACTO</a>
+                    <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
                   </li>
                 </ul>
               </div>
@@ -96,5 +96,3 @@
     </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-</body>
-</html>
