--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,16 +27,16 @@
                     <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="../pages/nosotros.html"">NOSOTROS</a>
+                      <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/productos.html"">PRODUCTOS</a>
+                    <a class="nav-link" href="../pages/productos.html">PRODUCTOS</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="../pages/reviews.html">REVIEWS</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html"">CONTACTO</a>
+                    <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
                   </li>
                 </ul>
               </div>
